# FraudSense

./: .env.dokploy  .env.example  .env.production  .gitignore  DEBUG.md  DEPLOYMENT.md  DEPLOY_SIMPLE.md  QUICK_DEPLOY.md  README.md  SETUP.md  TESTING.md  VERCEL_ENV_FIX.md  deploy.sh  docker-compose.yml  dokploy-compose.local.yml  dokploy-compose.yml  mongo-init.js  package.json  setup-env.sh  turnserver.conf
api-backend/: CLAUDE.md  README.md  main.py  pyproject.toml
api-backend/app/: __init__.py  clients.py  config.py  main.py  models.py  utils.py
backend/: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  railway.json  server.js  turnserver-prod.conf  turnserver.conf  vercel.json
backend/middleware/: audioUpload.js
backend/models/: Conversation.js  FraudAnalysis.js  Message.js  User.js
backend/routes/: ai-analysis.js  audio-storage.js  conversations.js  messages.js  users.js
backend/services/: audioProcessor.js  fraudDetection.js  vllmClient.js
front-end-new/: .gitignore  DEPLOYMENT.md  README.md  config.js  package-lock.json  package.json  server.js  vercel.json
front-end-new/.next/: prerender-manifest.json  trace
front-end-new/.next/cache/: .rscinfo
front-end-new/app/: globals.css  layout.tsx  page.tsx
front-end-new/components/: CallInterface.tsx  CallSetup.tsx  ChatInput.tsx  ChatMessage.tsx  FraudDialog.tsx  UserJoinModal.tsx
frontend/: .env.example  DEPLOYMENT.md  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
(+56 files in other folders)
